<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">YourMiaw</string>
    <string name="categories">Categories</string>
    <string name="all_miaw">All Miaw</string>
    <string name="recommended">Recommended</string>
    <string-array name="types_name">
        <item>Village Cat</item>
        <item>Persian</item>
        <item>British Shorthair</item>
        <item>Ragdoll</item>
        <item>Scottish Fold</item>
        <item>Sphynk</item>
        <item>Munchkin</item>
        <item>Maine Coon</item>
        <item>Bengal</item>
    </string-array>
    <string name="placeholder_name">Beluga</string>
    <string name="placeholder_rating">45.6</string>
    <string name="placeholder_name_category">Village Cat</string>
    <string name="placeholder_desc_category">Village cats are a type of pet cat in Indonesia that is very easy to find. Usually these cats live wild or free around human settlements. This type of cat can have a variety of coat colors and diverse physical characteristics. They are usually allowed to roam freely around the neighborhood and rely on food from trash, hunting, or human food scraps. There are also domestic cats that are pets. The advantage of keeping a mongrel cat is that it does not require special care so you don\'t have to bother with a lot of preparation.</string>
    <string name="placeholder_desc_cat">Beluga is a very friendly and affectionate cat. She enjoys playing with her owner and always gives warmth with her gentle hugs. Beluga is also intelligent and quick to learn basic commands. Her soft and white fur makes her look like a ballerina on the carpet.</string>
    <string name="detail_category">Detail Category</string>
    <string name="source">Source: https://hellosehat.com/sehat/informasi-kesehatan/jenis-kucing-peliharaan/</string>
    <string name="share">Share</string>
    <string name="placeholder_search" tools:ignore="TypographyEllipsis">village cat ...</string>
    <string name="detail_miaw">Detail Miaw</string>
    <string name="buy_now">Buy Now</string>
    <string name="toast_buy">You have successfully bought this %s miaw.</string>
    <string name="share_via">Share via</string>
    <string name="share_content_category">Name: %s\nDescription: %s"</string>
    <string name="share_content_cat">Name: %s\nPrice: $%s\nCategory: %s\nDescription: %s"</string>
    <string name="about_developer">About Developer</string>
    <string name="profile_name">Eko Rahayu Widodo</string>
    <string name="profile_email">ekowidodo073@gmail.com</string>
    <string name="tagline_app">your best pet cat is here.</string>
    <string-array name="types_photo">
        <item>@drawable/cat_1_village</item>
        <item>@drawable/cat_2_persian</item>
        <item>@drawable/cat_3_british_shorthair</item>
        <item>@drawable/cat_4_ragdoll</item>
        <item>@drawable/cat_5_scottish_fold</item>
        <item>@drawable/cat_6_sphynk</item>
        <item>@drawable/cat_7_munchkin</item>
        <item>@drawable/cat_8_maine_coon</item>
        <item>@drawable/cat_9_bengal</item>
    </string-array>
    <string-array name="types_desc">
        <item>Village cats are a type of pet cat in Indonesia that is very easy to find. Usually these cats live wild or free around human settlements. This type of cat can have a variety of coat colors and diverse physical characteristics. They are usually allowed to roam freely around the neighborhood and rely on food from trash, hunting, or human food scraps. There are also domestic cats that are pets. The advantage of keeping a mongrel cat is that it does not require special care so you don\'t have to bother with a lot of preparation.</item>
        <item>The next popular breed of cat to be a pet is the Persian cat. Its flat face and long fur make this cat much loved by people. Despite being a long-haired cat breed, Persian cats do not require much special care. However, because of their long fur, you should regularly comb their hair to avoid tangles and fleas on their bodies.With its graceful appearance, Persian cats are very fond of being cuddled and sleeping on their owner\'s lap.</item>
        <item>Another popular cat breed is the British Shorthair. It has the characteristics of a gray coat color, thick and short carpet-like fur, large round eyes, and medium-colored size. Unlike the general breed of cats, British Shorthairs are said to be calm and quiet animals.They usually bond easily with their owners, are affectionate and adaptable. Unfortunately, they are not very fond of being carried. British Shorthairs get along well with all kinds of animals, such as cats, rabbits, and birds. This is perfect for those of you who like to keep more than one type of animal to care for.</item>
        <item>Want a cat that follows you everywhere, warmly welcomes you home, or a cat you can sleep with? Choose the Ragdoll cat breed. These cats have long, brightly colored fur and blue eyes. With this elegant appearance they are very clingy and prefer to play with humans rather than fellow cats. Ragdolls are also kind, obedient, cooperative and can play with children.</item>
        <item>Quoted from The Cat Fanciers\' Association, Scottish Fold is a breed of cat originating from Scotland. Scottish Fold has unique features, namely ears that fold forward due to genetic mutations. It has a round face with soft, thick fur and large eyes. At first glance, this cat looks like a teddy bear. With a sweet expression, this cat breed is adaptable and easily shows affection to its owner. These cats are also quite calm and do not panic easily when in a new environment or there are strangers in the house. Scottish Fold does not need much care. Just provide nutritious food and abundant affection so that he grows healthy and happy.</item>
        <item>Sphynx cats are the most unique of all cats because they have no fur. This cat has a genetic mutation that has occurred for a long time. This cat is named Sphynx because it is similar to Sphynx, one of the statues in Egypt. Besides having no fur, other physical characteristics are its lemon-shaped eyes, large ears, and many body folds. Its character is very calm, ignorant, and very quiet. Because it is hairless, this cat has special care in that you must often wipe its skin regularly.</item>
        <item>Munchkin cats are cat models that have unique physical characteristics, namely short legs or legs that are shorter than the average cat. Even so, this type of cat is very fast and agile in moving. He is very active running around the house as well as being able to sneak into tight corners because of his cute body. Munchkins are affectionate cats. They are not reluctant to show affection to their owners, such as asking to be petted or sleeping on their owners\' laps. This breed of cat is also generally adaptable and sociable with strangers. Although sometimes showing fear, over time he will easily play with humans he has just met.</item>
        <item>If you\'re meeting a Maine Coon cat for the first time, you might be a bit surprised by its size. Maine Coons are referred to as \'giant cats\'. This is because they are bigger, taller and stronger than the average cat. The cat\'s fur is very dense with a pointed chin and ears. Despite its large size, the maine coon is a cat with a lively, sweet and very friendly character. This cat is also very easy to get along with humans and other animals.</item>
        <item>The Bengal cat breed is in high demand due to the leopard-like pattern on its fur. This striped pattern is one of the breed\'s main characteristics. Bengal coat colors can vary, including tan or snow white with black stripe patterns, In addition, they are very active, curious and playful. Bengal cats are very adaptable and loyal to their owners. It is also not reluctant to show affection to its owner, such as asking to be petted, sleeping on the lap, or asking to be invited to play.</item>
    </string-array>
    <string-array name="recommended_name">
        <item>Beluga</item>
        <item>Beluga Jr.</item>
        <item>Sumbul</item>
        <item>Shisha</item>
        <item>Oyen</item>
        <item>Rico</item>
        <item>Gembul</item>
        <item>Monis</item>
        <item>Kanabawi</item>
        <item>Aing Macan</item>
    </string-array>
    <string-array name="recommended_photo">
        <item>@drawable/cat_1_beluga</item>
        <item>@drawable/cat_2_beluga_jr</item>
        <item>@drawable/cat_3_sumbul</item>
        <item>@drawable/cat_4_shisha</item>
        <item>@drawable/cat_5_oyen</item>
        <item>@drawable/cat_6_rico</item>
        <item>@drawable/cat_7_gembul</item>
        <item>@drawable/cat_8_monis</item>
        <item>@drawable/cat_9_kanabawi</item>
        <item>@drawable/cat_10_aing_macan</item>
    </string-array>
    <string-array name="recommended_price">
        <item>35.2</item>
        <item>25.1</item>
        <item>14.9</item>
        <item>24.8</item>
        <item>34.7</item>
        <item>24.7</item>
        <item>24.6</item>
        <item>24.6</item>
        <item>14.5</item>
        <item>34.4</item>
    </string-array>
    <string-array name="recommended_desc">
        <item>Beluga is a very friendly and affectionate cat. She enjoys playing with her owner and always gives warmth with her gentle hugs. Beluga is also intelligent and quick to learn basic commands. Her soft and white fur makes her look like a ballerina on the carpet.</item>
        <item>Beluga Jr. is the younger version of Beluga, full of energy. He is always excited to explore his surroundings and play with his favorite toys. Although still young, Beluga Jr. has a cheerful personality and is full of love.</item>
        <item>Sumbul is a gray-colored cat with beautiful green eyes. She is a graceful and calm cat, often sitting by the window to enjoy the outside view. Although appearing quiet, Sumbul is very affectionate with her owner and enjoys playing with feather toys.</item>
        <item>Shisha is a graceful and intelligent female cat. She has beautiful brown and white fur and sharp eyes. Shisha is independent and enjoys exploring her surroundings. She is also adept at solving puzzles and is fun to play with.</item>
        <item>Oyen is a shy but friendly male cat. He takes a little time to adapt to new environments but then becomes a loyal and affectionate cat. Oyen enjoys sleeping on a comfortable sofa and appreciates gentle touches from his owner.</item>
        <item>Rico is a very active cat who loves to play. He is always full of energy and enjoys running around the house. Rico is a fun companion to have and will make you smile with his cheerfulness every day.</item>
        <item>Gembul is a chubby cat with thick and soft fur. He loves to eat and often falls asleep under the sunlight. Although he looks lazy, Gembul is a warm and friendly cat, always ready to be cuddled by his owner.</item>
        <item>Monis is a cute and sociable cat. He has a friendly and fun-loving personality, enjoys sitting on his owner\'s lap while listening to stories. Monis is a loving cat and will brighten up your day.</item>
        <item>Kanabawi is a cat with long and beautiful fur. He is an elegant and graceful cat, often seen walking with gentle steps. Kanabawi is a loyal friend and will always be by your side through thick and thin.</item>
        <item>Aing Macan is a strong and brave cat. He is a cat who loves to explore the wilderness and has a sharp hunting instinct. Despite his wild side, Aing Macan is a loyal cat and will protect you in every way.</item>
    </string-array>
    <string name="cd_banner_image">banner image</string>
    <string name="cd_about_icon">about icon</string>
</resources>