<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pacifico_regular"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/md_theme_primary" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/about_page"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/cd_about_icon"
                android:padding="60dp"
                android:src="@drawable/ic_profile"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_banner"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cd_banner_image"
                android:elevation="2dp"
                android:scaleType="fitXY"
                android:src="@drawable/iv_banner" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/ll_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/cv_banner">

            <TextView
                style="@style/TextContent.Label"
                android:text="@string/categories" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/ll_types">

            <TextView
                style="@style/TextContent.Label"
                android:text="@string/recommended" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_recommended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/ll_popular">

            <TextView
                style="@style/TextContent.Label"
                android:text="@string/all_miaw" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>