<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.category.DetailCategoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:elevation="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/ic_arrow_back"
                app:tint="@color/md_theme_onPrimary" />

            <TextView
                style="@style/TextContent.Label"
                android:layout_marginStart="16dp"
                android:text="@string/detail_category"
                android:textColor="@color/md_theme_onPrimary" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/bottom_cicle_style"
            android:backgroundTint="@color/md_theme_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="80dp"
            app:cardCornerRadius="14dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                tools:src="@drawable/cat_1_village" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:lines="2"
            android:text="@string/source"
            android:textAlignment="center"
            android:textSize="10sp"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextContent.Label"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            tools:text="@string/placeholder_name_category"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="14sp"
            android:justificationMode="inter_word"
            tools:text="@string/placeholder_desc_category"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <Button
            android:id="@+id/action_share"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/share"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>