<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_primary"
    tools:context=".view.about.AboutActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/md_theme_onPrimary" />

        <TextView
            style="@style/TextContent.Label"
            android:layout_marginStart="16dp"
            android:text="@string/about_developer"
            android:textColor="@color/md_theme_onPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:padding="5dp"
            app:strokeWidth="10dp"
            app:strokeColor="@android:color/darker_gray"
            app:shapeAppearanceOverlay="@style/circleImageView"
            android:src="@drawable/iv_profile"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/opensans_bold"
            android:textColor="@color/md_theme_onPrimary"
            android:textSize="20sp"
            android:text="@string/profile_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/md_theme_default_dot"
            android:fontFamily="@font/poppins_light"
            android:text="@string/profile_email" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>